@@ -57,6 +57,7 @@ requests from users, including:
   Jean Opsomer
   Gonzalo Perez
   Djalma Pessoa
+  Molly Petersen
   Elizabeth Purdom
   Ana Quiterio
   Gillian Raab
