@@ -4,6 +4,9 @@
 	svyttest() now gives an error if the binary group variable isn't binary
 	(for StackOverflow 60930323)
 
+	confint.svyglm Wald-type intervals now correctly label the columns (eg 2.5%, 97.5%)
+	(for Molly Petersen)
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
